--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: A blog about lorem ipsum dolor sit amet
 description: A blog about lorem ipsum dolor sit amet
-baseurl: "/will-jekyll-template" # the subpath of your site, e.g. /blog
-url: "https://willianjusten.com.br" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+baseurl: "/jkeyll2" # the subpath of your site, e.g. /blog
+url: "https://sidrana.dev" # the base hostname & protocol for your site e.g. http://abc.de
 
 # User settings
 username: Lorem Ipsum
